--- a/index.html
+++ b/index.html
@@ -1,28 +1,45 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Flatiron Task Lister</title>
-  <link rel="stylesheet" href="./style.css">
-</head>
-<body>
-  <div id="main-content">
-    <h1>Task Lister Lite™️</h1>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Flatiron Task Lister</title>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
+    <div id="main-content">
+      <h1>Task Lister Lite™️</h1>
 
-    <form id="create-task-form" action="" method="POST">
-      <label for="new-task-description">Task description:</label>
-      <input type="text" id="new-task-description" name="new-task-description" placeholder="description">
-      <input type="submit" value="Create New Task">
-    </form>
+      <form id="create-task-form">
+        <label for="new-task-description">Task description:</label>
+        <input type="text" id="new-task-description" placeholder="description" required />
 
-    <div id="list">
-      <h2>My Todos:</h2>
-      <ul id="tasks">
-      </ul>
+        <label for="priority">Priority:</label>
+        <select id="priority" name="priority">
+          <option value="High">High</option>
+          <option value="Medium">Medium</option>
+          <option value="Low">Low</option>
+        </select>
+
+        <label for="user">User:</label>
+        <input type="text" id="user" placeholder="user" />
+
+        <label for="duration">Duration:</label>
+        <input type="text" id="duration" placeholder="duration" />
+
+        <label for="date-due">Date Due:</label>
+        <input type="date" id="date-due" />
+
+        <input type="submit" value="Create New Task" />
+      </form>
+
+      <div id="list">
+        <h2>My Todos:</h2>
+        <ul id="tasks"></ul>
+        <button id="sort-ascending">Sort Ascending</button>
+        <button id="sort-descending">Sort Descending</button>
+      </div>
+
+      <script src="./src/index.js"></script>
     </div>
-
-    <script src="./src/index.js"></script>
-  </div>
-
-</body>
+  </body>
 </html>
